Increasing coverage of GameService class.